--- a/NovaImage.vcxproj
+++ b/NovaImage.vcxproj
@@ -27,6 +27,8 @@
     <ClCompile Include="Image\MonoImage.cpp" />
     <ClCompile Include="Image\RawImage.cpp" />
     <ClCompile Include="Image\ScanImage.cpp" />
+    <ClCompile Include="Notification\NotificationLayout.cpp" />
+    <ClCompile Include="Notification\NotificationWidget.cpp" />
     <ClCompile Include="Processor\BaseProcessor.cpp" />
     <ClCompile Include="Processor\CommonProcessor.cpp" />
     <ClCompile Include="Processor\CurvesProcessor.cpp" />
@@ -66,6 +68,8 @@
     <QtMoc Include="Widget\DiagramItem.h" />
     <QtMoc Include="Widget\DiagramTextItem.h" />
     <QtMoc Include="Widget\DiagramLineItem.h" />
+    <QtMoc Include="Notification\NotificationLayout.h" />
+    <QtMoc Include="Notification\NotificationWidget.h" />
     <ClInclude Include="Processor\BaseProcessor.h" />
     <ClInclude Include="Processor\CommonProcessor.h" />
     <ClInclude Include="Processor\CurvesProcessor.h" />
