--- a/NovaImage.vcxproj.filters
+++ b/NovaImage.vcxproj.filters
@@ -301,4 +301,9 @@
       <Filter>Translation Files</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <QtRcc Include="Resources\Resource.qrc">
+      <Filter>Resource Files</Filter>
+    </QtRcc>
+  </ItemGroup>
 </Project>
