--- a/NovaImage.vcxproj
+++ b/NovaImage.vcxproj
@@ -28,6 +28,10 @@
     <ClCompile Include="Core\ToolButton.cpp" />
     <ClCompile Include="Core\UndoSystem.cpp" />
     <ClCompile Include="Core\View.cpp" />
+    <ClCompile Include="Diagram\DiagramAngleItem.cpp" />
+    <ClCompile Include="Diagram\DiagramItem.cpp" />
+    <ClCompile Include="Diagram\DiagramLineItem.cpp" />
+    <ClCompile Include="Diagram\DiagramTextItem.cpp" />
     <ClCompile Include="Image\BaseImage.cpp" />
     <ClCompile Include="Image\DicomImage.cpp" />
     <ClCompile Include="Image\GeneralImage.cpp" />
@@ -46,10 +50,6 @@
     <ClCompile Include="Widget\CommonWidget.cpp" />
     <ClCompile Include="Widget\CurveSquare.cpp" />
     <ClCompile Include="Widget\CurvesWidget.cpp" />
-    <ClCompile Include="Widget\DiagramAngleItem.cpp" />
-    <ClCompile Include="Widget\DiagramItem.cpp" />
-    <ClCompile Include="Widget\DiagramLineItem.cpp" />
-    <ClCompile Include="Widget\DiagramTextItem.cpp" />
     <ClCompile Include="Widget\HistogramWidget.cpp" />
     <ClCompile Include="Widget\LevelsWidget.cpp" />
     <ClCompile Include="Widget\MagnifierWidget.cpp" />
@@ -73,13 +73,14 @@
     <QtMoc Include="Core\View.h" />
     <QtMoc Include="Core\RecentFiles.h" />
     <ClInclude Include="Core\UndoSystem.h" />
+    <QtMoc Include="Diagram\DiagramAngleItem.h" />
+    <QtMoc Include="Diagram\DiagramItem.h" />
+    <QtMoc Include="Diagram\DiagramLineItem.h" />
+    <QtMoc Include="Diagram\DiagramTextItem.h" />
     <ClInclude Include="Image\DicomImage.h" />
     <ClInclude Include="Image\ImageData.h" />
     <ClInclude Include="Image\MonoImage.h" />
     <ClInclude Include="Image\RawImage.h" />
-    <QtMoc Include="Widget\DiagramItem.h" />
-    <QtMoc Include="Widget\DiagramTextItem.h" />
-    <QtMoc Include="Widget\DiagramLineItem.h" />
     <QtMoc Include="Notification\NotificationLayout.h" />
     <QtMoc Include="Notification\NotificationWidget.h" />
     <ClInclude Include="Processor\BaseProcessor.h" />
@@ -88,7 +89,6 @@
     <ClInclude Include="Processor\HistogramProcessor.h" />
     <ClInclude Include="Processor\InverseProcessor.h" />
     <ClInclude Include="Processor\LevelsProcessor.h" />
-    <QtMoc Include="Widget\DiagramAngleItem.h" />
     <QtMoc Include="Widget\MagnifierWidget.h" />
     <ClInclude Include="Widget\Peg.h" />
     <QtMoc Include="Widget\ToolBoxWidget.h" />
