--- a/NovaImage.vcxproj.filters
+++ b/NovaImage.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClCompile Include="Diagram\DiagramLengthItem.cpp">
       <Filter>Diagram</Filter>
     </ClCompile>
+    <ClCompile Include="Widget\ChartView.cpp">
+      <Filter>Widget</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Widget\BaseWidget.h">
@@ -327,6 +330,9 @@
     </ClInclude>
     <ClInclude Include="Core\UndoSystem.h">
       <Filter>Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Widget\ChartView.h">
+      <Filter>Widget</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
