--- a/NovaImage.vcxproj.filters
+++ b/NovaImage.vcxproj.filters
@@ -177,6 +177,9 @@
     <ClCompile Include="Widget\ChartView.cpp">
       <Filter>Widget</Filter>
     </ClCompile>
+    <ClCompile Include="Widget\ProgressDialog.cpp">
+      <Filter>Widget</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Widget\BaseWidget.h">
@@ -272,6 +275,9 @@
     <QtMoc Include="Widget\ChartView.h">
       <Filter>Widget</Filter>
     </QtMoc>
+    <QtMoc Include="Widget\ProgressDialog.h">
+      <Filter>Widget</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Image\BaseImage.h">
@@ -335,6 +341,9 @@
       <Filter>Core</Filter>
     </ClInclude>
     <ClInclude Include="Image\OldDataheader.h">
+      <Filter>Image</Filter>
+    </ClInclude>
+    <ClInclude Include="Image\ImageReader.h">
       <Filter>Image</Filter>
     </ClInclude>
   </ItemGroup>
