--- a/NovaImage.vcxproj
+++ b/NovaImage.vcxproj
@@ -52,6 +52,7 @@
     <ClCompile Include="Processor\HistogramProcessor.cpp" />
     <ClCompile Include="Processor\InverseProcessor.cpp" />
     <ClCompile Include="Processor\LevelsProcessor.cpp" />
+    <ClCompile Include="Processor\ThresholdSegmentationProcessor.cpp" />
     <ClCompile Include="Widget\ChartView.cpp" />
     <ClCompile Include="Widget\ColorButton.cpp" />
     <ClCompile Include="Widget\CommonWidget.cpp" />
@@ -112,6 +113,7 @@
     <QtMoc Include="Widget\ChartView.h" />
     <QtMoc Include="Widget\ImageQualityDialog.h" />
     <QtMoc Include="Widget\ImageQualityChartView.h" />
+    <ClInclude Include="Processor\ThresholdSegmentationProcessor.h" />
     <ClInclude Include="Widget\Peg.h" />
     <QtMoc Include="Widget\ToolBoxWidget.h" />
     <QtMoc Include="Widget\RawParameterDialog.h" />
